# task-manager

./: .dockerignore  .env.prod.example  .env.tunnel.example  .eslintrc.json  .formatter.exs  .gitignore  .npmrc  .prettierrc  .prettierrc.json  Caddyfile  Cargo.toml  Dockerfile.backend-elixir  Dockerfile.backend-rust  Dockerfile.frontend  README.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  go.work  go.work.sum  mix.exs  nginx.conf  nx.json  package.json  pnpm-lock.yaml  project.json  rust-toolchain.toml  tailwind.config.ts  tsconfig.base.json  vitest.config.ts  vitest.workspace.ts
apps/backend/main/: .env.docker  Cargo.toml  Dockerfile  go.mod  go.sum  main.go  project.json
apps/backend/main/auth/: main.go
apps/backend/main/cleanup/: main.go
apps/backend/main/dbClient/: main.go  models.go  schema.sql
apps/backend/main/docs/: docs.go  swagger.json  swagger.yaml
apps/backend/main/internal/mongo/: main.go  types.go
apps/backend/main/internal/postgres/: extraTypes.go  main.go  models.go  schema.sql
apps/backend/main/internal/socketManager/: main.go
apps/backend/main/internal/validation/: main.go
apps/backend/main/internal/zitadel/: getUserById.go  main.go  types.go
apps/backend/main/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_user-meta.down.sql  000002_user-meta.up.sql  000003_zitadel_user_id.down.sql  000003_zitadel_user_id.up.sql  20250614213911_init.sql  20250706191733_create_assets_table.up.sql
apps/backend/main/router/: handleSocket.go  main.go  middleware.go
apps/backend/main/router/auth/: confirmEmail.go  login.go  logout.go  main.go  resetPassword.go  signUp.go  updatePassword.go  verifyResetPasswordToken.go
apps/backend/main/router/errorHandlers/: main.go
apps/backend/main/router/profile/: changeEmail.go  getCurrentWorkspace.go  getProfile.go  main.go  patchProfile.go  patchProfileAvatar.go  synchronizeZitadelUser.go
apps/backend/main/router/users/: getUserList.go  main.go
apps/backend/main/router/utils/: main.go  types.go
apps/backend/main/router/workspaces/: cancelSoftDelete.go  createWorkspace.go  getWorkspace.go  getWorkspaceList.go  main.go  softDeleteWorkspace.go  updateWorkspace.go
apps/backend/main/router/workspaces/accesses/: getAccesses.go  main.go  updateAccess.go
apps/backend/main/router/workspaces/pages/: createPage.go  deletePage.go  getPage.go  getPageList.go  main.go  (+1 more)
apps/backend/main/socketManager/: main.go
apps/backend/main/src/: app.rs  config.rs  db_connections.rs  main.rs  swagger.rs
apps/backend/main/src/authentik_api/: client.rs  mod.rs  types.rs
apps/backend/main/src/controllers/: mod.rs
apps/backend/main/src/entities/: mod.rs
apps/backend/main/src/middleware/: auth_guard.rs  mod.rs  page_access_guard.rs  workspace_access_guard.rs
apps/backend/main/src/router/: assets.rs  board_statuses.rs  calls.rs  mod.rs  pages.rs  profile.rs  tasks.rs  users.rs  workspaces.rs
apps/backend/main/src/services/: mod.rs
apps/backend/main/src/shared/: constants.rs  deserialization.rs  generate_initials_avatar.rs  mod.rs  mongo_constants.rs  traits.rs
apps/backend/main/src/types/: app_state.rs  mod.rs  pagination.rs
apps/backend/main/src/workers/: asset_cleanup.rs  mod.rs
apps/backend/main/tests/: create_workspace.rs
apps/backend/main/tests/snapshots/: create_workspace__create_workspace_empty_body.snap
apps/backend/main/utils/auth/: main.go
apps/backend/main/utils/errorCodes/: main.go
apps/backend/main/utils/errorHandlers/: main.go
apps/backend/main/utils/ginTools/: main.go
apps/backend/main/utils/pagination/: main.go
apps/backend/main/utils/routerUtils/: main.go
apps/backend/main/utils/sessionTools/: main.go
apps/backend/main/validation/: main.go
apps/backend/rest/: Cargo.toml  project.json
apps/backend/rest/src/: main.rs
apps/backend/rest/src/controllers/: mod.rs  user_controller.rs
apps/backend/rest/src/dto/: auth.rs  mod.rs  user.rs  workspace.rs
apps/backend/rest/src/entities/: mod.rs
apps/backend/rest/src/middleware/: auth.rs  mod.rs  with_auth.rs
apps/backend/rest/src/models/: page.rs  page_access.rs  user.rs  workspace_access.rs
apps/backend/rest/src/repositories/: mod.rs  user_credentials_repo.rs  user_repo.rs  workspace_repo.rs
apps/backend/rest/src/routes/: auth.rs  mod.rs  users.rs  workspace.rs
apps/backend/rest/src/services/: auth_service.rs  mod.rs  user_service.rs  workspace_service.rs
apps/backend/rest/src/shared/: mod.rs  traits.rs
apps/backend/rest/src/types/: app_state.rs  pagination.rs
apps/backend/storage/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  project.json
apps/backend/storage/docs/: docs.go  swagger.json  swagger.yaml
apps/backend/storage/router/: main.go  upload.go
apps/backend/storage/router/errorHandlers/: transformAuth0StrError.go
apps/backend/storage/src/: app.rs  db_connections.rs  main.rs  swagger.rs
apps/backend/storage/src/entities/: mod.rs
apps/backend/storage/src/redis/: error.rs  mod.rs  transaction.rs
apps/backend/storage/src/types/: app_state.rs
apps/backend/storage/src/workers/: blob_cleanup.rs  mod.rs  transaction_cleanup.rs
libs/backend/error-handlers/: Cargo.toml  project.json
libs/backend/error-handlers/src/: codes.rs  handlers.rs  lib.rs  ok_response.rs
libs/backend/migrator/: Cargo.toml  project.json
libs/backend/migrator/src/: cli.rs  down.rs  helpers.rs  lib.rs  migrator.rs  types.rs  up.rs
libs/backend/rust-api/: Cargo.toml  project.json
libs/backend/rust-api/migrations/: 20250614213911_init.sql  20250709203933_board_statuses.sql  20250910192256_chat.sql  20250923185843_chat_replies_pins.sql
libs/backend/rust-api/src/: lib.rs
libs/backend/rust-api/src/entities/: mod.rs
libs/backend/rust-api/src/migration/: mod.rs
libs/backend/utils/: Cargo.toml  project.json
libs/backend/utils/src/: auth_middleware.rs  lib.rs  shutdown_signal.rs  swagger.rs
libs/backend/utils/src/types/: jwks.rs  mod.rs
libs/workers/file-transfer-worker/wasm-hasher/: Cargo.toml
libs/workers/file-transfer-worker/wasm-hasher/src/: lib.rs
(+1632 files in other folders)
