
[workspace]
resolver = '2'
members = [
	'apps/backend/main',
	'apps/backend/storage',
	'libs/backend/error-handlers',
	'libs/backend/sql',
	'libs/backend/migrator',
	"libs/workers/file-transfer-worker/wasm-hasher",
]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 16
panic = "abort"

[profile.build-optimized]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
