[package]
name = "main"
version = "0.1.0"
edition = "2024"

[features]
test_auth_guard = []

[lib]
name = "app"
path = "src/app.rs"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
axum-macros = "0.5"
bcrypt = "0.17"
error_handlers = { path = "../../../libs/backend/error-handlers" }
insta = { version = "1.45", features = ["json", "redactions"] }
http-body-util = "0.1"
sql = { path = "../../../libs/backend/sql" }
migrator = { path = "../../../libs/backend/migrator" }
mime = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_path_to_error = "0.1"
jsonwebtoken = { version = "10", default-features = false, features = [
    "rust_crypto",
] }
# lapin = { version = "2.5", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
form_urlencoded = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
utoipa = { version = "5.4", features = ["uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
utils = { path = "../../../libs/backend/utils" }
