[package]
name = "rest"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8"
axum-macros = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
dotenvy = "0.15"
utoipa = "5.3"
utoipa-axum = "0.2"
utoipa-swagger-ui = "9.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
