[package]
name = "rest"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8"
axum-macros = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_path_to_error = "0.1"
form_urlencoded = "1.2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
dotenvy = "0.15"
utoipa = { version = "5.3", features = ["uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
