[package]
name = "storage"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8", features = ["multipart"] }
dotenvy = "0.15"
error_handlers = { path = "../../../libs/backend/error-handlers" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
utoipa = { version = "5.3", features = ["uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
