[package]
name = "error_handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-redis = { version = "0.22", optional = true }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = "0.8"
utoipa = { version = "5.4", features = ["uuid", "chrono"] }

[features]
default = []
redis = ["dep:deadpool-redis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
