[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrator"
path = "src/cli.rs"
