[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
utoipa = { version = "5.4", features = ["uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
