[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
jsonwebtoken = { version = "10", default-features = false, features = [
    "rust_crypto",
] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
error_handlers = { path = "../error-handlers" }
utoipa = "5.4"


[features]
test_auth_guard = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
