[package]
name = "wasm_source"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
blake3 = "1.8"

[dev-dependencies]
wasm-opt = "0.116"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "unwind"
codegen-units = 1
